--- a/src/css/components/items_list.sass
+++ b/src/css/components/items_list.sass
@@ -1,2 +1,15 @@
+.items-list__wrapper
+    margin-top: 40rem
+
 .items-list
+    margin-top: 30rem
     display: grid
+    grid-template-columns: repeat(5, 1fr)
+    gap: 25rem
+
+.items-list__management
+    display: flex
+    justify-content: center
+    gap: 20rem
+
+.items-list__button
