feat: add page pagination

--- a/src/css/base.sass
+++ b/src/css/base.sass
@@ -141,5 +141,7 @@ button
 
     //     border-radius: 0.8rem
 
+@import components/header
 @import components/item
 @import components/items_list
+@import components/UI/app_input
