--- a/src/css/components/items_list.sass
+++ b/src/css/components/items_list.sass
@@ -10,6 +10,7 @@
 .items-list__management
     display: flex
     justify-content: center
+    align-items: center
     gap: 20rem
 
 .items-list__button
