feat: base functional layout complete

--- a/src/css/base.sass
+++ b/src/css/base.sass
@@ -84,6 +84,7 @@ button
     border-radius: 8rem
     color: $primary-color
     cursor: pointer
+    transition: all 0.3s ease
 
     &>svg
         width: 24rem
