--- a/src/css/components/item.sass
+++ b/src/css/components/item.sass
@@ -5,7 +5,7 @@
     padding: 20rem 10rem
 
     border-radius: 10rem
-    transition: all 0.4s ease
+    transition: all 0.3s ease
 
     &:hover
         box-shadow: 0 0 8px 11px rgba(0,0,0,0.2)
@@ -25,6 +25,10 @@
     align-items: center
     justify-content: space-between
 
+    &>p
+        text-align: center
+        margin-top: 4rem
+
 .item__desription-header
     margin-top: 20rem
 
@@ -33,6 +37,4 @@
     font-weight: 400
 
 .item__desription-price
-    margin-top: 10rem
-
     color: $secondary-font-color
