feat: add searching functional

--- a/src/css/components/header.sass
+++ b/src/css/components/header.sass
@@ -3,3 +3,10 @@
     display: flex
     justify-content: space-between
     align-items: center
+
+    &>a
+        font-size: 16rem
+
+        &:hover
+            color: $secondary-font-color
+            text-decoration: underline
